test/wildcardForget2.slq

def foo()qfree=>(0:ğ”¹,1:ğ”¹);
def bar()=>(H(0:ğ”¹),H(1:ğ”¹));
def main(){
	(a,_):=foo(); // ok
	(b,_):=bar(); /// error
	return (a,b);
	// (TODO: better error message)
}
